--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "reacticons": "^0.0.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.4"
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
